# QtDemo2

./: CMakeLists.txt  QtDemo2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
